--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,11 @@
     "Audience": "http://localhost:6000",
     "LifeTime": "30",
     "SigningKey": "8772d19fe6694d893b7062eb9cef71a5"
+  },
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "http://82.112.254.244:8011"
+    ]
   }
 }
