--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   "Jwt": {
     "Issuer": "http://localhost:6000",
     "Audience": "http://localhost:6000",
-    "LifeTime": "30",
+    "LifeTime": "1440" ,// 1440 minutes = 1 day
     "SigningKey": "8772d19fe6694d893b7062eb9cef71a5"
   },
   "CorsSettings": {
